// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EscrowProgressStepper > matches snapshot for AWAITING_FUNDS 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-sky-500 bg-sky-50 text-sky-900"
        data-state="current"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-500"
        data-state="upcoming"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-500"
        data-state="upcoming"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`EscrowProgressStepper > matches snapshot for DISPUTED 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-sky-500 bg-sky-50 text-sky-900"
        data-state="current"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
    <div
      class="rounded-2xl border border-rose-200 bg-rose-50 p-4 text-sm text-rose-900"
      data-testid="escrow-disputed-branch"
    >
      The settlement is paused while the dispute is under review.
    </div>
  </div>
</DocumentFragment>
`;

exports[`EscrowProgressStepper > matches snapshot for FUNDED 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-sky-500 bg-sky-50 text-sky-900"
        data-state="current"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-500"
        data-state="upcoming"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`EscrowProgressStepper > matches snapshot for IN_REVIEW 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-sky-500 bg-sky-50 text-sky-900"
        data-state="current"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`EscrowProgressStepper > matches snapshot for SETTLED 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`EscrowProgressStepper > matches snapshot for SETTLEMENT_FAILED 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
    data-testid="escrow-progress-stepper"
  >
    <ol
      class="grid gap-3 md:grid-cols-3"
    >
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 1
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Funding
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 2
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Review
        </p>
      </li>
      <li
        class="rounded-2xl border p-4 border-emerald-500 bg-emerald-50 text-emerald-900"
        data-state="complete"
      >
        <p
          class="text-xs font-semibold uppercase tracking-[0.2em]"
        >
          Step 3
        </p>
        <p
          class="mt-2 text-base font-semibold"
        >
          Settlement
        </p>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for AWAITING_FUNDS 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--amber"
    data-testid="escrow-status-badge"
  >
    <span>
      Awaiting Funds
    </span>
  </span>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for DISPUTED 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--red"
    data-testid="escrow-status-badge"
  >
    <span>
      Disputed
    </span>
  </span>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for FUNDED 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--blue"
    data-testid="escrow-status-badge"
  >
    <span>
      Funded
    </span>
  </span>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for IN_REVIEW 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--teal"
    data-testid="escrow-status-badge"
  >
    <span>
      In Review
    </span>
  </span>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for SETTLED 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--green"
    data-testid="escrow-status-badge"
  >
    <span>
      Settled
    </span>
  </span>
</DocumentFragment>
`;

exports[`EscrowStatusBadge > matches snapshot for SETTLEMENT_FAILED 1`] = `
<DocumentFragment>
  <span
    class="status-badge status-badge--red"
    data-testid="escrow-status-badge"
  >
    <span>
      Settlement Failed
    </span>
  </span>
</DocumentFragment>
`;
